[package]
name = "wgs_runtime_wgpu"
version = "0.0.2"
authors = ["Fralonra <zoronlivingston@gmail.com>"]
description = "Wgs format"
edition = "2021"
homepage = "https://github.com/fralonra/wgs"
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/fralonra/wgs"
keywords = ["wgs", "wgsl", "graphics", "creative-coding"]

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.12", features = ["derive"] }
futures = "0.3"
raw-window-handle = "0.5"
wgpu = "0.16"
wgs_core = { version = "0.0.2", path = "../wgs_core" }
wgs_runtime_base = { version = "0.0.2", path = "../wgs_runtime_base" }
